k8s/charts-dev/templates/db.yaml
# apiVersion: postgresql.cnpg.io/v1
# kind: Cluster
# metadata:
#   name: database
# spec:
#   instances: 1

#   enableSuperuserAccess: true

#   storage:
#     size: 3Gi

---
# the CockroachDB client
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cockroachdb-client-secure
spec:
  replicas: 1
  selector:
    match: labels
    matchLabels:
      app: cockroachdb-client-secure
  template:
    metadata:
      labels:
        app: cockroachdb-client-secure
    spec:
      serviceAccountName: cockroachdb-sa
      containers:
        - name: cockroachdb-client-secure
          image: cockroachdb/cockroach:v23.2.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: client-certs
              mountPath: /cockroach/cockroach-certs/
          command:
            - sleep
            - "2147483648" # 2^31
      terminationGracePeriodSeconds: 0
      volumes:
        - name: client-certs
          projected:
            sources:
              - secret:
                  name: cockroachdb-node
                  items:
                    - key: ca.crt
                      path: ca.crt
              - secret:
                  name: cockroachdb-root
                  items:
                    - key: tls.crt
                      path: client.root.crt
                    - key: tls.key
                      path: client.root.key
            defaultMode: 256
